--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="score" id="score--1">3</p>
                 <div class="guess">
                     <p class="current-label">Current</p>
-                    <p class="current-score" id="current--1">LOST...</p>
+                    <p class="current-score" id="current--1">LOSE...</p>
                 </div>
             </section>
 
