--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
                 </div>
             </section>
 
-            <img src="dice-6.png" alt="Playing dice 1" class="dice dice--1" />
-            <img src="dice-6.png" alt="Playing dice 2" class="dice dice--2" />
-            <img src="dice-6.png" alt="Playing dice 3" class="dice dice--3" />
+            <img
+                src="/img/dice-6.png"
+                alt="Playing dice 1"
+                class="dice dice--1"
+            />
+            <img
+                src="/img/dice-6.png"
+                alt="Playing dice 2"
+                class="dice dice--2"
+            />
+            <img
+                src="/img/dice-6.png"
+                alt="Playing dice 3"
+                class="dice dice--3"
+            />
             <button class="btn btn--new">🔄 New game</button>
             <button class="btn btn--big">🎲 Big</button>
             <button class="btn btn--small">🎲 Small</button>
