Add media queries

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link rel="manifest" href="manifest.json" />
         <link rel="icon" href="/icon/favicon.ico" sizes="any" />
         <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="/css/queries.css" />
         <title>Simple Sic bo</title>
     </head>
     <body>
@@ -51,6 +52,7 @@
                 class="dice dice--3"
             />
             <button class="btn btn--new">🔄 New game</button>
+            <button class="btn btn--new media">🔄 New</button>
             <button class="btn btn--big">🎲 Big</button>
             <button class="btn btn--small">🎲 Small</button>
             <button class="btn btn--rule">📕 Rule</button>
