--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
             <img
                 src="/img/dice-6.png"
                 alt="Playing dice 1"
-                class="dice dice--0"
+                class="dice dice--0 hidden"
             />
             <img
                 src="/img/dice-6.png"
                 alt="Playing dice 2"
-                class="dice dice--1"
+                class="dice dice--1 hidden"
             />
             <img
                 src="/img/dice-6.png"
                 alt="Playing dice 3"
-                class="dice dice--2"
+                class="dice dice--2 hidden"
             />
             <button class="btn btn--new">🔄 New game</button>
             <button class="btn btn--new media">🔄 New</button>
