--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
             <button class="btn btn--small">🎲 Small</button>
             <button class="btn btn--rule">📕 Rule</button>
         </main>
+
+        <div class="rule-modal hidden">
+            <button class="close-modal">&times;</button>
+            <h1>Simple Sic Bo Rules 📕</h1>
+            <ol>
+                <li>
+                    Hit Big button to roll dices, if the combination of 3 dices
+                    greater than or equal 11, you get 1 score!
+                </li>
+                <li>
+                    Hit Small button to roll dices, if the combination of 3
+                    dices less than or equal 10, you get 1 score!
+                </li>
+                <li>
+                    The first player who gets 10 scores will become the winner
+                    🎉
+                </li>
+            </ol>
+        </div>
+        <div class="rule-overlay hidden"></div>
+
         <script src="script.js"></script>
     </body>
 </html>
