--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             rel="stylesheet"
         />
         <link rel="manifest" href="manifest.json" />
-        <link rel="icon" href="/icon/favicon.ico" sizes="any" />
-        <link rel="apple-touch-icon" href="/icon/apple-touch-icon.png" />
-        <link rel="stylesheet" href="/css/style.css" />
-        <link rel="stylesheet" href="/css/queries.css" />
+        <link rel="icon" href="icon/favicon.ico" sizes="any" />
+        <link rel="apple-touch-icon" href="icon/apple-touch-icon.png" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/queries.css" />
         <title>Simple Sic bo</title>
     </head>
     <body>
@@ -37,17 +37,17 @@
             </section>
 
             <img
-                src="/img/dice-6.png"
+                src="img/dice-6.png"
                 alt="Playing dice 1"
                 class="dice dice--0 hidden"
             />
             <img
-                src="/img/dice-6.png"
+                src="img/dice-6.png"
                 alt="Playing dice 2"
                 class="dice dice--1 hidden"
             />
             <img
-                src="/img/dice-6.png"
+                src="img/dice-6.png"
                 alt="Playing dice 3"
                 class="dice dice--2 hidden"
             />
