Add AI simulator

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             />
             <button class="btn btn--new">🔄 New game</button>
             <button class="btn btn--new media">🔄 New</button>
+            <button class="btn btn--ai">🤖 AI</button>
             <button class="btn btn--big">🎲 Big</button>
             <button class="btn btn--small">🎲 Small</button>
             <button class="btn btn--rule">📕 Rule</button>
