Optimize dices loading

--- a/index.html
+++ b/index.html
@@ -41,19 +41,35 @@
             </section>
 
             <img
-                src="img/dice-6.png"
+                src="img/dice-1.png"
                 alt="Playing dice 1"
                 class="dice dice--0 hidden"
             />
             <img
-                src="img/dice-6.png"
+                src="img/dice-2.png"
                 alt="Playing dice 2"
                 class="dice dice--1 hidden"
             />
             <img
-                src="img/dice-6.png"
+                src="img/dice-3.png"
                 alt="Playing dice 3"
                 class="dice dice--2 hidden"
+            />
+
+            <img
+                src="img/dice-4.png"
+                alt="Preload dice 4"
+                class="dice hidden"
+            />
+            <img
+                src="img/dice-5.png"
+                alt="Preload dice 5"
+                class="dice hidden"
+            />
+            <img
+                src="img/dice-6.png"
+                alt="Preload dice 6"
+                class="dice hidden"
             />
             <button class="btn btn--new">🔄 New game</button>
             <button class="btn btn--new media">🔄 New</button>
